2012-11-06 Trevor Rowe <trevorrowe@gmail.com>

  * lib/aws/core/signature/version_3_https.rb: Added x-amz-security-token
  header for signature version 3 https requests when a session token is
  provided.

2012-11-02 Trevor Rowe <trevorrowe@gmail.com>

  * CONTRIBUTORS.txt: Added a contributors file.

  * ChangeLog, lib/aws/version.rb: Bump version to 1.7.0

2012-10-29 Trevor Rowe <trevorrowe@gmail.com>

  * features/dynamo_db/batch_get.feature,
  features/dynamo_db/step_definitions/batch_get.rb,
  features/dynamo_db/step_definitions/batch_write.rb,
  lib/aws/dynamo_db/batch_get.rb, lib/aws/dynamo_db/table.rb,
  spec/aws/dynamo_db/batch_get_spec.rb, spec/aws/dynamo_db/table_spec.rb:
  Added support for consistent reads to AWS::DynamoDB::BatchGet.

  * features/dynamo_db/batch_write.feature,
  features/dynamo_db/step_definitions/batch_write.rb,
  features/dynamo_db/step_definitions/dynamo_db.rb: Sped up a few of the
  DynamoDB batch write integration tests.

  * lib/aws/api_config/DynamoDB-2011-12-05.yml, lib/aws/dynamo_db/client.rb:
  Added consistent read to AWS::DynamoDB::Client#batch_get input and outputs.

  * lib/aws/rds/event_collection.rb: Removed the empty file for
  AWS::RDS::EventCollection.

  * lib/aws/core.rb: Corrected the documentation on
  AWS.config.dynamo_db_big_decimals.

  * lib/aws/rds/config.rb: Corrected the default RDS endpoint, now
  'rds.us-east-1.amazonaws.com'.

  * lib/aws/rds/client.rb: Documented AWS::RDS::Client API operation methods.

  * lib/aws/rds.rb: Added basic documentation for the AWS::RDS service
  interface.

  * lib/aws/api_config/RDS-2012-07-31.yml, lib/aws/rds/db_instance.rb,
  lib/aws/rds/db_instance_collection.rb, lib/aws/rds/db_snapshot.rb,
  lib/aws/rds/db_snapshot_collection.rb, lib/aws/rds/event_collection.rb:
  Added missing attribution comment blocks to a few scripts.

  * lib/aws/api_config/RDS-2012-07-31.yml: Revert "Added api configuration for
  RDS."
